// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Page 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-headerRow"
      >
        <div
          className="a-Page-header"
        >
          <h2
            className="a-Page-title"
          >
            <span
              className="a-TplField"
            >
              This is Title
            </span>
            <div
              className="a-Remark a-Remark--warning"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <i
                className="a-Remark-icon fa fa-question-circle"
              />
            </div>
          </h2>
          <small
            className="a-Page-subTitle"
          >
            <span
              className="a-TplField"
            >
              This is SubTitle
            </span>
          </small>
        </div>
        <div
          className="a-Page-toolbar"
        >
          <span
            className="a-TplField"
          >
            This is toolbar
          </span>
        </div>
      </div>
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          This is body
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page classNames 1`] = `
<div
  className="a-Page a-Page--withSidebar"
  onClick={[Function]}
>
  <div
    className="a-Page-aside aside-class-name"
  >
    <div
      className="a-TplField a-Page-asideTplWrapper"
    >
      This is aside
    </div>
  </div>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-headerRow"
      >
        <div
          className="a-Page-header header-class-name"
        >
          <h2
            className="a-Page-title"
          >
            <span
              className="a-TplField"
            >
              This is Title
            </span>
            <div
              className="a-Remark a-Remark--warning"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <i
                className="a-Remark-icon fa fa-question-circle"
              />
            </div>
          </h2>
          <small
            className="a-Page-subTitle"
          >
            <span
              className="a-TplField"
            >
              This is SubTitle
            </span>
          </small>
        </div>
        <div
          className="a-Page-toolbar toolbar-class-name"
        >
          <span
            className="a-TplField"
          >
            This is toolbar
          </span>
        </div>
      </div>
      <div
        className="a-Page-body body-class-name"
      >
        <span
          className="a-TplField"
        >
          This is body
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax & feedback 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable a is 6
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget a-Modal a-Modal--1th"
    role="dialog"
  >
    <div
      class="a-Modal-overlay in"
    />
    <div
      class="a-Modal-content in"
    >
      <div
        class="a-Modal-header"
      >
        <a
          class="a-Modal-close"
          data-tooltip="关闭弹窗"
        >
          <svg
            class="icon"
            p-id="1463"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M967.81435 106.836237 917.16274 56.18565 512 461.34839 106.836237 56.18565 56.184627 106.836237 461.34839 512 56.184627 917.163763 106.836237 967.815373 512 562.65161 917.16274 967.815373 967.81435 917.163763 562.650587 512Z"
              data-spm-anchor-id="a313x.7781069.0.i0"
              p-id="1464"
            />
          </svg>
        </a>
        <div
          class="a-Modal-title"
        >
          弹框
        </div>
      </div>
      <div
        class="a-Modal-body"
      >
        <span
          class="a-TplField"
        >
          this is feedback
        </span>
      </div>
      <div
        class="a-Modal-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="a-Button a-Button--primary"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax & feedback 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable a is 6
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=ajax 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              RequestAjax
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable a is 6
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        />
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget a-Modal a-Modal--1th"
    role="dialog"
  >
    <div
      class="a-Modal-overlay in"
    />
    <div
      class="a-Modal-content in"
    >
      <div
        class="a-Modal-header"
      >
        <a
          class="a-Modal-close"
          data-tooltip="关闭弹窗"
        >
          <svg
            class="icon"
            p-id="1463"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M967.81435 106.836237 917.16274 56.18565 512 461.34839 106.836237 56.18565 56.184627 106.836237 461.34839 512 56.184627 917.163763 106.836237 967.815373 512 562.65161 917.16274 967.815373 967.81435 917.163763 562.650587 512Z"
              data-spm-anchor-id="a313x.7781069.0.i0"
              p-id="1464"
            />
          </svg>
        </a>
        <div
          class="a-Modal-title"
        >
          弹框
        </div>
      </div>
      <div
        class="a-Modal-body"
      >
        <span
          class="a-TplField"
        >
          this is dialog
        </span>
      </div>
      <div
        class="a-Modal-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="a-Button a-Button--primary"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog mergeData 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable a is 
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget a-Modal a-Modal--1th"
    role="dialog"
  >
    <div
      class="a-Modal-overlay in"
    />
    <div
      class="a-Modal-content in"
    >
      <div
        class="a-Modal-header"
      >
        <a
          class="a-Modal-close"
          data-tooltip="关闭弹窗"
        >
          <svg
            class="icon"
            p-id="1463"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M967.81435 106.836237 917.16274 56.18565 512 461.34839 106.836237 56.18565 56.184627 106.836237 461.34839 512 56.184627 917.163763 106.836237 967.815373 512 562.65161 917.16274 967.815373 967.81435 917.163763 562.650587 512Z"
              data-spm-anchor-id="a313x.7781069.0.i0"
              p-id="1464"
            />
          </svg>
        </a>
        <div
          class="a-Modal-title"
        >
          弹框
        </div>
      </div>
      <div
        class="a-Modal-body"
      >
        <form
          class="a-Form a-Form--horizontal"
          novalidate=""
        >
          <div
            class="a-Form-item a-Form-item--horizontal"
          >
            <label
              class="a-Form-label a-Form-itemColumn--2"
            >
              <span>
                A
              </span>
            </label>
            <div
              class="a-Form-value"
            >
              <div
                class="a-Form-control a-TextControl"
              >
                <div
                  class="a-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    name="a"
                    placeholder=""
                    type="text"
                    value="3"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="a-Modal-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="submit"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=dialog mergeData 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable a is 3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        />
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget a-Drawer a-Drawer--right a-Drawer--md a-Modal--1th"
    role="dialog"
  >
    <div
      class="a-Drawer-overlay in"
    />
    <div
      class="a-Drawer-content in"
    >
      <a
        class="a-Drawer-close"
      >
        <svg
          class="icon"
          p-id="1463"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M967.81435 106.836237 917.16274 56.18565 512 461.34839 106.836237 56.18565 56.184627 106.836237 461.34839 512 56.184627 917.163763 106.836237 967.815373 512 562.65161 917.16274 967.815373 967.81435 917.163763 562.650587 512Z"
            data-spm-anchor-id="a313x.7781069.0.i0"
            p-id="1464"
          />
        </svg>
      </a>
      <div
        class="a-Drawer-header"
      />
      <div
        class="a-Drawer-body"
      >
        <span
          class="a-TplField"
        >
          this is drawer
        </span>
      </div>
      <div
        class="a-Drawer-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="a-Button a-Button--primary"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer mergeData 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable a is 
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget a-Drawer a-Drawer--right a-Drawer--md a-Modal--1th"
    role="dialog"
  >
    <div
      class="a-Drawer-overlay in"
    />
    <div
      class="a-Drawer-content in"
    >
      <a
        class="a-Drawer-close"
      >
        <svg
          class="icon"
          p-id="1463"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M967.81435 106.836237 917.16274 56.18565 512 461.34839 106.836237 56.18565 56.184627 106.836237 461.34839 512 56.184627 917.163763 106.836237 967.815373 512 562.65161 917.16274 967.815373 967.81435 917.163763 562.650587 512Z"
            data-spm-anchor-id="a313x.7781069.0.i0"
            p-id="1464"
          />
        </svg>
      </a>
      <div
        class="a-Drawer-header"
      />
      <div
        class="a-Drawer-body"
      >
        <form
          class="a-Form a-Form--horizontal"
          novalidate=""
        >
          <div
            class="a-Form-item a-Form-item--horizontal"
          >
            <label
              class="a-Form-label a-Form-itemColumn--2"
            >
              <span>
                A
              </span>
            </label>
            <div
              class="a-Form-value"
            >
              <div
                class="a-Form-control a-TextControl"
              >
                <div
                  class="a-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    name="a"
                    placeholder=""
                    type="text"
                    value="3"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="a-Drawer-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="submit"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page handleAction actionType=drawer mergeData 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDrawer
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable a is 3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          The variable value is 2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi error show Message 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <div
          className="a-Alert a-Alert--danger"
        >
          <button
            className="a-Alert-close"
            onClick={[Function]}
            type="button"
          >
            <span>
              ×
            </span>
          </button>
          Internal Error
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reFetch when condition changes 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          The variable value is 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reFetch when condition changes 2`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          The variable value is 2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Dialog action 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable value is 1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Dialog action 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable value is 1
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget a-Modal a-Modal--1th"
    role="dialog"
  >
    <div
      class="a-Modal-overlay in"
    />
    <div
      class="a-Modal-content in"
    >
      <div
        class="a-Modal-header"
      >
        <a
          class="a-Modal-close"
          data-tooltip="关闭弹窗"
        >
          <svg
            class="icon"
            p-id="1463"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M967.81435 106.836237 917.16274 56.18565 512 461.34839 106.836237 56.18565 56.184627 106.836237 461.34839 512 56.184627 917.163763 106.836237 967.815373 512 562.65161 917.16274 967.815373 967.81435 917.163763 562.650587 512Z"
              data-spm-anchor-id="a313x.7781069.0.i0"
              p-id="1464"
            />
          </svg>
        </a>
        <div
          class="a-Modal-title"
        >
          弹框
        </div>
      </div>
      <div
        class="a-Modal-body"
      >
        <form
          class="a-Form a-Form--horizontal"
          novalidate=""
        >
          <div
            class="a-Form-item a-Form-item--horizontal"
          >
            <label
              class="a-Form-label a-Form-itemColumn--2"
            >
              <span />
            </label>
            <div
              class="a-Form-value"
            >
              <div
                class="a-Form-control a-TextControl"
              >
                <div
                  class="a-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    name="a"
                    placeholder=""
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="a-Modal-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="a-Button a-Button--primary"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Dialog action 3`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable value is 2
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable value is 1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable value is 1
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget a-Drawer a-Drawer--right a-Drawer--md a-Modal--1th"
    role="dialog"
  >
    <div
      class="a-Drawer-overlay in"
    />
    <div
      class="a-Drawer-content in"
    >
      <a
        class="a-Drawer-close"
      >
        <svg
          class="icon"
          p-id="1463"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M967.81435 106.836237 917.16274 56.18565 512 461.34839 106.836237 56.18565 56.184627 106.836237 461.34839 512 56.184627 917.163763 106.836237 967.815373 512 562.65161 917.16274 967.815373 967.81435 917.163763 562.650587 512Z"
            data-spm-anchor-id="a313x.7781069.0.i0"
            p-id="1464"
          />
        </svg>
      </a>
      <div
        class="a-Drawer-header"
      />
      <div
        class="a-Drawer-body"
      >
        <form
          class="a-Form a-Form--horizontal"
          novalidate=""
        >
          <div
            class="a-Form-item a-Form-item--horizontal"
          >
            <label
              class="a-Form-label a-Form-itemColumn--2"
            >
              <span />
            </label>
            <div
              class="a-Form-value"
            >
              <div
                class="a-Form-control a-TextControl"
              >
                <div
                  class="a-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    name="a"
                    placeholder=""
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="a-Drawer-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="a-Button a-Button--primary"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Drawer action 3`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              OpenDialog
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable value is 2
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Form submit 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <div
            class="a-Panel a-Panel--default a-Panel--form"
            style="position: relative;"
          >
            <div
              class="a-Panel-heading"
            >
              <h3
                class="a-Panel-title"
              >
                <span
                  class="a-TplField"
                >
                  表单
                </span>
              </h3>
            </div>
            <div
              class="a-Panel-body"
            >
              <form
                class="a-Form a-Form--normal"
                novalidate=""
              >
                <div
                  class="a-Form-item a-Form-item--normal"
                >
                  <div
                    class="a-Form-control a-TextControl"
                  >
                    <div
                      class="a-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        name="a"
                        placeholder=""
                        type="text"
                        value="1"
                      />
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div>
              <div
                class="a-Panel-btnToolbar a-Panel-footer"
              >
                <button
                  class="a-Button a-Button--default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
              </div>
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable value is 1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by Form submit 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <div
            class="a-Panel a-Panel--default a-Panel--form"
            style="position: relative;"
          >
            <div
              class="a-Panel-heading"
            >
              <h3
                class="a-Panel-title"
              >
                <span
                  class="a-TplField"
                >
                  表单
                </span>
              </h3>
            </div>
            <div
              class="a-Panel-body"
            >
              <form
                class="a-Form a-Form--normal"
                novalidate=""
              >
                <div
                  class="a-Form-item a-Form-item--normal"
                >
                  <div
                    class="a-Form-control a-TextControl"
                  >
                    <div
                      class="a-TextControl-input"
                    >
                      <input
                        autocomplete="off"
                        name="a"
                        placeholder=""
                        type="text"
                        value="2"
                      />
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div>
              <div
                class="a-Panel-btnToolbar a-Panel-footer"
              >
                <button
                  class="a-Button a-Button--default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
              </div>
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable value is 2
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by action 1`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              Reload
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable value is 1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi reload by action 2`] = `
<div>
  <div
    class="a-Page"
  >
    <div
      class="a-Page-content"
    >
      <div
        class="a-Page-main"
      >
        <div
          class="a-Page-toolbar"
        >
          <button
            class="a-Button a-Button--default"
            type="button"
          >
            <span>
              Reload
            </span>
          </button>
        </div>
        <div
          class="a-Page-body"
        >
          <span
            class="a-TplField"
          >
            The variable value is 2
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi show loading 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <div
          className="a-Spinner-overlay"
        >
          <div
            className="a-Spinner a-Spinner--lg"
          />
        </div>
        <span
          className="a-TplField"
        >
          The variable value is 
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi show loading 2`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          The variable value is 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <div
          className="a-Spinner-overlay"
        >
          <div
            className="a-Spinner a-Spinner--lg"
          />
        </div>
        <span
          className="a-TplField"
        >
          The variable value is 
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 2`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          The variable value is 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 3`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          The variable value is 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initApi silentPolling 4`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          The variable value is 4
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initData 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          The variable value is 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page initFetchOn trigger initApi fetch when condition becomes ture 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          The variable value is 6
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page location query 1`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          The variable value is 5
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Page location query 2`] = `
<div
  className="a-Page"
  onClick={[Function]}
>
  <div
    className="a-Page-content"
  >
    <div
      className="a-Page-main"
    >
      <div
        className="a-Page-body"
      >
        <span
          className="a-TplField"
        >
          The variable value is 6
        </span>
      </div>
    </div>
  </div>
</div>
`;
